# teleogenic-causal-pddl

./: .gitignore  pyproject.toml
teleogenic_causal_pddl/: cong-domain.ipynb  example-1.ipynb
tests/: test-social-law.py
