[tool.poetry]
name = "teleogenic-causal-pddl"
version = "0.1.0"
description = "Experimenting with the unified-planning framework"
authors = ["Zakhar Kogan <36503576+zaharkogan@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "teleogenic_causal_pddl"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
pandas = "^2.0.3"
unified-planning = {git = "https://github.com/aiplan4eu/unified-planning.git"}
up-social-laws = {git = "https://github.com/aiplan4eu/up-social-laws.git"}
up-pyperplan = {git = "https://github.com/aiplan4eu/up-pyperplan"}
up-fast-downward = {git = "https://github.com/aiplan4eu/up-fast-downward.git"}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
